[metadata]
name = napari-storm

author = Lenny Reinkensmeier and Mark Bates
author_email = lenny.reinkensmeier@ifnano.de
url = https://github.com/napari-storm/napari-storm
license = Custom
description = A simple Plugin to visualize STORM data with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/napari-storm/napari-storm/issues
    Documentation = https://github.com/napari-storm/napari-storm#README.md
    Source Code = https://github.com/napari-storm/napari-storm
    User Support = https://github.com/napari-storm/napari-storm/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    alabaster==0.7.12
    appdirs==1.4.4
    asttokens==2.0.7
    attrs==22.1.0
    Babel==2.10.3
    backcall==0.2.0
    build==0.8.0
    cachey==0.2.1
    certifi==2022.6.15
    charset-normalizer==2.1.0
    click==8.1.3
    cloudpickle==2.1.0
    colorama==0.4.5
    commonmark==0.9.1
    cycler==0.11.0
    dask==2022.8.0
    debugpy==1.6.2
    decorator==5.1.1
    docstring-parser==0.14.1
    docutils==0.19
    easygui==0.98.3
    entrypoints==0.4
    executing==0.9.1
    fonttools==4.34.4
    freetype-py==2.3.0
    fsspec==2022.7.1
    h5py==3.7.0
    HeapDict==1.0.1
    hsluv==5.0.3
    idna==3.3
    imageio==2.21.1
    imagesize==1.4.1
    importlib-metadata==4.12.0
    importlib-resources==5.9.0
    ipykernel==6.15.1
    ipython==8.4.0
    ipython-genutils==0.2.0
    jedi==0.18.1
    Jinja2==3.1.2
    jsonschema==4.9.1
    jupyter-client==7.3.4
    jupyter-core==4.11.1
    kiwisolver==1.4.4
    locket==1.0.0
    magicgui==0.5.1
    MarkupSafe==2.1.1
    matplotlib==3.5.3
    matplotlib-inline==0.1.3
    napari==0.4.16
    napari-console==0.0.4
    napari-plugin-engine==0.2.0
    napari-svg==0.1.6
    nest-asyncio==1.5.5
    networkx==2.8.5
    npe2==0.6.1
    numpy==1.23.1
    numpydoc==1.4.0
    packaging==21.3
    pandas==1.4.3
    parso==0.8.3
    partd==1.2.0
    pep517==0.13.0
    pickleshare==0.7.5
    Pillow==9.2.0
    Pint==0.19.2
    pkgutil_resolve_name==1.3.10
    pooch==1.6.0
    prompt-toolkit==3.0.30
    psutil==5.9.1
    psygnal==0.3.5
    pure-eval==0.2.2
    pydantic==1.9.2
    Pygments==2.12.0
    PyOpenGL==3.1.6
    pyparsing==3.0.9
    PyQt5==5.15.7
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.11.0
    pyrsistent==0.18.1
    python-dateutil==2.8.2
    pytomlpp==1.0.11
    pytz==2022.1
    PyWavelets==1.3.0
    pywin32==304
    PyYAML==6.0
    pyzmq==23.2.0
    qtconsole==5.3.1
    QtPy==2.2.0
    requests==2.28.1
    rich==12.5.1
    scikit-image==0.19.3
    scipy==1.9.0
    six==1.16.0
    snowballstemmer==2.2.0
    Sphinx==5.1.1
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    stack-data==0.3.0
    superqt==0.3.3
    tifffile==2022.8.8
    tomli==2.0.1
    toolz==0.12.0
    tornado==6.2
    tqdm==4.64.0
    traitlets==5.3.0
    typer==0.6.1
    typing_extensions==4.3.0
    urllib3==1.26.11
    vispy==0.10.0
    wcwidth==0.2.5
    wrapt==1.14.1
    zipp==3.8.1

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-storm = napari_storm
