[metadata]
name = napari-storm

author = Lenny Reinkensmeier and Mark Bates
author_email = lenny.reinkensmeier@ifnano.de
url = https://github.com/napari-storm/napari-storm
license = Custom
description = A simple Plugin to visualize STORM data with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/napari-storm/napari-storm/issues
    Documentation = https://github.com/napari-storm/napari-storm#README.md
    Source Code = https://github.com/napari-storm/napari-storm
    User Support = https://github.com/napari-storm/napari-storm/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =


[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-storm = napari_storm
